Bug 507980 - Korganizer crashes on double-click on calendar header
Summary: Korganizer crashes on double-click on calendar header
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: monthview (other bugs)
Version First Reported In: 6.4.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-07 13:50 UTC by Frank Steinmetzger
Modified: 2025-08-07 20:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2025-08-07 13:50:47 UTC
STEPS TO REPRODUCE
1. open korganizer
2. switch to month view
3. double-click on the view’s header label (where it currently says “August 2025”)

OBSERVED RESULT
Kontact crashes

EXPECTED RESULT
It should not. :)

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Kernel Version: 6.15.9-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 8700G w/ Radeon 780M Graphics
Memory: 64 GiB of RAM (58.5 GiB usable)
Comment 1 Laurent Montel 2025-08-07 14:01:05 UTC
Git commit 0d4a2118c7fa1192253b566eef94de70139d30e0 by Laurent Montel.
Committed on 07/08/2025 at 14:00.
Pushed by mlaurent into branch 'master'.

Fix BUG 507980: Korganizer crashes on double-click on calendar header

M  +8    -5    src/month/monthscene.cpp

https://invent.kde.org/pim/eventviews/-/commit/0d4a2118c7fa1192253b566eef94de70139d30e0
Comment 2 Laurent Montel 2025-08-07 14:01:26 UTC
Git commit 0aa83c4c0975539f8d94a455a3f3901a7651e578 by Laurent Montel.
Committed on 07/08/2025 at 14:01.
Pushed by mlaurent into branch 'release/25.08'.

Fix BUG 507980: Korganizer crashes on double-click on calendar header
(cherry picked from commit 0d4a2118c7fa1192253b566eef94de70139d30e0)

M  +8    -5    src/month/monthscene.cpp

https://invent.kde.org/pim/eventviews/-/commit/0aa83c4c0975539f8d94a455a3f3901a7651e578