Fix BUG 507980: Korganizer crashes on double-click on calendar header

BUG: 507980